# protoc-gen-kun

./: .clang-tidy  .gitignore  CMakeLists.txt  README.MD  buffer.h  codec.h  enum.h  field.h  generator.h  header.h  kun.h  main.cpp  message.h  protobuf.h  util.h
cmake/: FindGperftools.cmake
test/: a.kun.h  a.pb.cc  a.pb.h  a.proto  align.cpp  b.proto  benchmark.cpp  decode_pb_test.cpp  encode_pb_test.cpp  encode_test.cpp  gen.sh  helper.h  test_kun.cpp  test_pb.cpp  test_serialize.cpp
